# gameofliferust

./: Cargo.toml  readme.md
src/: cell_system.rs  gui.rs  main.rs
